--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,9 +3,32 @@
 .container {
   width: 90%;
   margin: 0 auto;
+  text-align: center;
 }
 
 .col-md-6 {
-  background-color: pink;
-  border: 2px solid purple;
+  // background-color: pink;
+  // border: 2px solid purple;
+}
+
+td {
+  padding: 30px;
+}
+
+#monthTable {
+  margin: 0 auto;
+}
+
+#monthView {
+  margin-top: 30px;
+  th {
+    padding: 10px;
+    background-color: #d2d2d2;
+  }
+  td {
+    opacity: 0;
+    padding: 25px;
+    background-color: #e2e2e2;
+    transition: all 1s ease-in-out;
+  }
 }
