Add and refine month & year styles

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,9 @@
 @import 'grid12';
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 
 .container {
   width: 90%;
