--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400");
 @-ms-viewport {
   width: device-width; }
 
@@ -711,6 +712,9 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
+
+body {
+  font-family: 'Montserrat', sans-serif; }
 
 .container {
   width: 90%;
