--- a/src/css/style.css
+++ b/src/css/style.css
@@ -716,10 +716,14 @@
 body {
   font-family: 'Montserrat', sans-serif; }
 
+.onHover {
+  background-color: #d2d2d2; }
+
 .container {
-  width: 90%;
+  width: auto;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  box-shadow: #000; }
 
 td {
   padding: 30px;
@@ -733,7 +737,7 @@ td {
   margin: 0 auto; }
 
 #monthView {
-  margin-top: 30px; }
+  margin: 0 auto; }
   #monthView th {
     padding: 10px;
     background-color: #c2c2c2;
@@ -747,9 +751,6 @@ td {
       cursor: pointer;
       background-color: #d2d2d2;
       transition: .2s ease-in-out; }
-
-.onHover {
-  background-color: #d2d2d2; }
 
 ul {
   list-style: none;
