--- a/src/css/style.css
+++ b/src/css/style.css
@@ -722,8 +722,7 @@ body {
 .container {
   width: auto;
   margin: 0 auto;
-  text-align: center;
-  box-shadow: #000; }
+  text-align: center; }
 
 td {
   padding: 30px;
@@ -745,10 +744,8 @@ td {
   #monthView td {
     opacity: 0;
     padding: 25px;
-    background-color: #e2e2e2;
     transition: opacity .5s ease-in-out; }
     #monthView td:hover {
-      cursor: pointer;
       background-color: #d2d2d2;
       transition: .2s ease-in-out; }
 
