--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,3 +62,21 @@ ul {
     }
   }
 }
+
+@media only screen and (min-width: 992px) {
+  #right-container {
+    float: left;
+  }
+  
+  #left-container {
+    float: right;
+  }
+
+  #vl {
+    margin-top: 50px;
+    height: 500px;
+    width: 1px;
+    padding: 0;
+    background-color: #888;
+  }
+}
